rns-lang/tests/snapshots/err-parser-class_directive-header-trailing_tokens-dot_method.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
   .class    HelloWorld    .method public <init>()V .end method
.super java/lang/Object

.end method
----- STDOUT -----

----- STDERR -----
Error: unexpected directive after class name
   ╭─[ test_data/integration/err/parser/class_directive/header/trailing_tokens/dot_method.ja:1:28 ]
   │
 1 │    .class    HelloWorld    .method public <init>()V .end method
   │                            ──────────────────┬─────────────────  
   │                                              ╰─────────────────── must start on a new line
   │ 
   │ Note: Consider starting a new line for the '.method' directive.
───╯
