rns-lang/tests/snapshots/err-parser-class_directive-header-trailing_tokens-dot_super.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class HelloWorld       .super java/lang/Object

.end method
----- STDOUT -----

----- STDERR -----
Error: unexpected directive after class name
   ╭─[ test_data/integration/err/parser/class_directive/header/trailing_tokens/dot_super.ja:1:25 ]
   │
 1 │ .class HelloWorld       .super java/lang/Object
   │                         ───────────┬───────────  
   │                                    ╰───────────── must start on a new line
   │ 
   │ Note: Consider starting a new line for the '.super' directive.
───╯
