rns-lang/tests/snapshots/err-parser-class_directive-header-trailing_tokens-final_keyword.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class HelloWorld final
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: unexpected keyword after class name
   ╭─[ test_data/integration/err/parser/class_directive/header/trailing_tokens/final_keyword.ja:1:19 ]
   │
 1 │ .class HelloWorld final
   │                   ──┬──  
   │                     ╰──── access flags must appear before the class name
   │ 
   │ Note: Access flags must appear before the class name: '.class [access_flags] <name>'
───╯
